--- a/index.html
+++ b/index.html
@@ -5,77 +5,107 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+        integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="./Vue/assets/js/vue.js"></script>
+    <script src="./assets/js/axios.js"></script>
     <title>Document</title>
 </head>
 
-<body>
-    <header>
-        <h1>Título da página</h1>
-        <nav>
-            <details>
-                <summary>Sites para estudar HTML</summary>
+<body class="ui container">
+    <div id="app">
+
+
+        <header>
+            <h1>Estudos em WEB</h1>
+            <nav>
+                <details>
+                    <summary>Sites para estudar HTML</summary>
+                    <dl>
+                        <dd>
+                            <a href="https://www.w3c.br">W3C</a>
+                        </dd>
+                        <dd>
+                            <a href="https://whatwg.org">WHAT Working Group</a>
+                        </dd>
+                        <dd>
+                            <a href="https://webplatform.github.io">WebPlatform.org</a>
+                        </dd>
+                        <dd>
+                            <a href="https://developer.mozilla.org/pt-BR/">Mozilla Developer Network</a>
+                        </dd>
+                    </dl>
+                </details>
+                <a href="https://github.com/LeoRogelioSilva">GitHub Leo</a>
+            </nav>
+        </header>
+        <hr>
+        <p>
+            O HTML usa tags para identificar o conteúdo de uma página.
+        </p>
+        <p>Esse texto por exemplo, é um parágrafo.</p>
+        <p>Texto em <strong> negrito </strong> e <em> itálico</em></p>
+        <p dir="rtl">Escrever na direita</p>
+        <hr>
+        <section>
+            <h1>Estudos por assunto</h1>
+            <article>
+                <h2>Vue</h2>
+                <dl>
+                    <dd v-for="page in pages"> <p v-html="page.nome"></p></dd>
+                </dl>
+            </article>
+            <br>
+            <hr>
+            <article>
+                <h2>HTML básico</h2>
+                <p>É uma boa prática deixar todo texto dentro de tags. A mais básica é o &lt;p&gt;.</p>
+                <p>Para Escrever um caractere especial, use '&', seguido de seu <a
+                        href="https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references"> nome </a>
+                    e por fim ';'</p>
+                <p>Exemplos:</p>
                 <dl>
                     <dd>
-                        <a href="https://www.w3c.br">W3C</a>
+                        &copy;
                     </dd>
                     <dd>
-                        <a href="https://whatwg.org">WHAT Working Group</a>
+                        &sect;
                     </dd>
                     <dd>
-                        <a href="https://webplatform.github.io">WebPlatform.org</a>
-                    </dd>
-                    <dd>
-                        <a href="https://developer.mozilla.org/pt-BR/">Mozilla Developer Network</a>
+                        &reg;
                     </dd>
                 </dl>
-            </details>
-            <a href="https://github.com/LeoRogelioSilva">GitHub Leo</a>
-        </nav>
-    </header>
-    <hr>
-    <p>
-        O HTML usa tags para identificar o conteúdo de uma página.
-    </p>
-    <p>Esse texto por exemplo, é um parágrafo.</p>
-    <p>Texto em <strong> negrito </strong> e <em> itálico</em></p>
-    <p dir="rtl">Escrever na direita</p>
-    <hr>
-    <section>
-        <h1>Seção 1</h1>
-        <article>
-            <h2>Item 1</h2>
-            <p>É uma boa prática deixar todo texto dentro de tags. A mais básica é o &lt;p&gt;.</p>
-            <p>Para Escrever um caractere especial, use '&', seguido de seu <a href="https://en.wikipedia.org/wiki/List_of_XML_and_HTML_character_entity_references"> nome </a> e por fim ';'</p>
-            <p>Exemplos:</p>
-            <dl>
-                <dd>
-                    &copy;
-                </dd>
-                <dd>
-                    &sect;
-                </dd>
-                <dd>
-                    &reg;
-                </dd>
-            </dl>
-        </article>
-        <article>
-            <h2>Item 2</h2>
-            <p>É possível usar 'nbps' (no break space) para evitar que um texto fique&nbsp;sempre&nbsp;na&nbsp;mesma&nbsp;linha, sem quebra.</p>
-            <img src="Aula1/gato.webp" alt="Gatinho" width="auto">
-            <h3>Links (âncoras)</h3>
-            <a href="outraPagina.html" title="link" target="_blank" rel="next">Link</a>
-        </article>
-    </section>
-    <hr>
-    <footer>
-        <center>
-            Fim da página
-        </center>
-    </footer>
-    <br><br>
-
-
+                <p>É possível usar 'nbps' (no break space) para evitar que um texto
+                    fique&nbsp;sempre&nbsp;na&nbsp;mesma&nbsp;linha, sem quebra.</p>
+                <img src="Aula1/gato.webp" alt="Gatinho" width="auto">
+                <h3>Links (âncoras)</h3>
+                <dl>
+                    <dd></dd>
+                </dl>
+                <a href="outraPagina.html" title="link" target="_blank" rel="next">Link</a>
+            </article>
+        </section>
+        <hr>
+        <footer>
+            <center>
+                Call Me
+            </center>
+        </footer>
+        <br><br>
+    </div>
+    <script>
+        var app = new Vue({
+            el: "#app",
+            data: {
+                pages:[
+                    {nome: '<a href="./Vue/ola-vue.html">Hello World</a>'},
+                    {nome: '<a href="./Vue/bitcoin.html">Cotação Bitcoin</a>'},
+                    {nome: '<a href="./Vue/usuario_aleatorio.html">Usuários Aleatorios</a>'},
+                ]
+            }
+        });
+    </script>
 </body>
 
 </html>
